mastodon/02-postgres.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: postgres
      role: master
  template:
    metadata:
      labels:
        app: postgres
        role: master
    spec:
      containers:
      - name: postgres
        image: postgres:11.2-alpine
        ports:
        - name: postgres
          containerPort: 6379
        volumeMounts:
          - mountPath: "/var/lib/postgres/data/"
            name: postgres-data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgresql
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: mastodon
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
    role: master
